ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asp-core-baseline-ingress
  namespace: asp-core-baseline
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "asp-core-baseline-letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - hosts:
    - "*.localhost"
    secretName: echo-tls
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: asp-core-baseline-backend-service 
            port: 
              number: 80
  defaultBackend:
    service:
      name: test
      port:
        number: 80
